--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,1 +1,4 @@
 <app-header></app-header>
+<app-vessel></app-vessel>
+<app-timestamp-table></app-timestamp-table>
+<app-timestamp-editor></app-timestamp-editor>
