DCSA-3 added header scss

--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div class="header">
+  <div class="header__logo">
+    <img src="/assets/DCSA_logo_color_on_dark_background.png" width="50%">
+  </div>
+</div>
