--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+//Dark navy blue
+$darkNavyBlue : #1E1E2C;
+//Foam white
+$foamWhite: #F8F7F7;
+//Teal blue
+$tealBlue: #009093;
+//Coral orange
+$coralOrange: #DE5141;
+//Buoy yellow
+$buoyYellow: #F3E300;
+//Steel grey
+$steelGrey: #E4E4E6;
