--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -1,5 +1,11 @@
 <div class="header">
   <div class="header__logo">
-    <img src="/assets/DCSA_logo_color_on_dark_background.png" width="50%">
+    <img src="/assets/DCSA_logo_color_on_dark_background.png" height="50px">
+  </div>
+  <div>
+    <span i18n="@@menu_entry_port_call">Port Call</span>
+  </div>
+  <div>
+    <span i18n="@@menu_entry_mandator">Company Name: {{ companyName }}</span>
   </div>
 </div>
