--- a/ui/src/app/header/header.component.scss
+++ b/ui/src/app/header/header.component.scss
@@ -3,6 +3,7 @@
 .header {
   width: 100%;
   height: 50px;
+  margin-bottom: 100px;
   background-color: $darkNavyBlue;
   &__logo {
     width: 20%;
