DCSA-3 Added vessel editor

--- a/ui/src/app/vessel-editor/vessel-editor.component.html
+++ b/ui/src/app/vessel-editor/vessel-editor.component.html
@@ -1,1 +1,14 @@
 <p>vessel-editor works!</p>
+
+<span class="p-float-label">
+    <input id="name" type="text" pInputText [(ngModel)]=vessel.name>
+    <label for="name">Vesselname</label>
+</span>
+<span class="p-float-label">
+    <input id="imo" type="number" pInputText [(ngModel)]=vessel.imo>
+    <label for="imo">IMO</label>
+</span>
+<span class="p-float-label">
+    <input id="teu" type="number" pInputText [(ngModel)]=vessel.teu>
+    <label for="teu">TEU</label>
+</span>
