--- a/ui/src/app/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/timestamp-table/timestamp-table.component.html
@@ -1,1 +1,22 @@
-<p>timestamp-table works!</p>
+<p-table [value]="timestamps">
+  <ng-template pTemplate="header">
+    <tr>
+      <th>Timestamp</th>
+      <th>Classifier Code</th>
+      <th>Event Type Code</th>
+      <th>Event Location</th>
+      <th>Comm. Timestamp</th>
+      <th>Event. Timestamp</th>
+      <th>Port From</th>
+      <th>Port To</th>
+      <th>Next Port</th>
+      <th>Direction</th>
+      <th>Terminal ID</th>
+      <th>Location ID</th>
+      <th>Option</th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-product>
+
+  </ng-template>
+</p-table>
