DCSA-3 added service for table

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
-<app-vessel></app-vessel>
-<app-timestamp-table></app-timestamp-table>
-<app-timestamp-editor></app-timestamp-editor>
+<div class="main">
+  <app-header></app-header>
+  <app-vessel></app-vessel>
+  <app-timestamp-table></app-timestamp-table>
+  <app-timestamp-editor></app-timestamp-editor>
+</div>
