--- a/ui/src/app/vessel/vessel.component.html
+++ b/ui/src/app/vessel/vessel.component.html
@@ -1,10 +1,14 @@
-<p-card>
-  <p-header>
-    Vessel
-  </p-header>
-  <p-button type="button" icon="pi pi-plus" class="p-button-raised p-button-rounded" (onClick)="createNewVessel()"></p-button>
-  <p-button type="button" icon="pi pi-pencil" class="p-button-raised p-button-rounded" (onClick)="editVessel()"></p-button>
-  <p-dropdown [options]="vessels" [(ngModel)]="selectedVessel" [filter]="true"></p-dropdown>
-</p-card>
-
-
+<div class="p-grid">
+  <div class="p-col-1"></div>
+  <div class="p-col-10">
+    <p-card>
+      <p-header>
+        Vessel
+      </p-header>
+      <p-button type="button" icon="pi pi-plus" class="p-button-raised p-button-rounded" (onClick)="createNewVessel()"></p-button>
+      <p-button type="button" icon="pi pi-pencil" class="p-button-raised p-button-rounded" (onClick)="editVessel()"></p-button>
+      <p-dropdown [options]="vessels" [(ngModel)]="selectedVessel" [filter]="true"></p-dropdown>
+    </p-card>
+  </div>
+  <div class="p-col-1"></div>
+</div>
