--- a/ui/src/app/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/timestamp-editor/timestamp-editor.component.html
@@ -1,1 +1,21 @@
-<p>timestamp-editor works!</p>
+<p-table [value]="timestamps">
+  <ng-template pTemplate="header">
+  </ng-template>
+  <ng-template pTemplate="body" let-timestamp>
+    <tr>
+      <td><p-dropdown [options]="timestampTypes" [(ngModel)]="timestamp.timestampType"></p-dropdown></td>
+      <td>{{ timestamp.classifierCode }}</td>
+      <td>{{ timestamp.eventTypeCode }}</td>
+      <td>{{ timestamp.eventLocationCode }}</td>
+      <td><p-calendar [(ngModel)]="commTimestampDate" dateFormat="dd.mm.yy"></p-calendar></td>
+      <td><p-calendar [(ngModel)]="eventTimestamp" dateFormat="dd.mm.yy"></p-calendar></td>
+      <td>{{ timestamp.portFrom }}</td>
+      <td>{{ timestamp.portTo }}</td>
+      <td>{{ timestamp.nextPort }}</td>
+      <td>{{ timestamp.direction }}</td>
+      <td>{{ timestamp.terminalId }}</td>
+      <td><label><input type="text" pInputText [(ngModel)]="timestamp.locationId"/></label></td>
+      <td><p-button icon="pi pi-save"></p-button></td>
+    </tr>
+  </ng-template>
+</p-table>
