--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="main">
   <app-header></app-header>
   <app-vessel></app-vessel>
-  <app-timestamp-table></app-timestamp-table>
-  <app-timestamp-editor></app-timestamp-editor>
+  <p-card>
+    <app-timestamp-table></app-timestamp-table>
+    <app-timestamp-editor></app-timestamp-editor>
+  </p-card>
 </div>
