--- a/ui/src/app/vessel-editor/vessel-editor.component.html
+++ b/ui/src/app/vessel-editor/vessel-editor.component.html
@@ -1,14 +1,20 @@
-<p>vessel-editor works!</p>
-
-<span class="p-float-label">
-    <input id="name" type="text" pInputText [(ngModel)]=vessel.name>
-    <label for="name">Vesselname</label>
-</span>
-<span class="p-float-label">
-    <input id="imo" type="number" pInputText [(ngModel)]=vessel.imo>
-    <label for="imo">IMO</label>
-</span>
-<span class="p-float-label">
-    <input id="teu" type="number" pInputText [(ngModel)]=vessel.teu>
-    <label for="teu">TEU</label>
-</span>
+<div class="p-fluid">
+  <div class="p-field p-grid">
+    <label for="name" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Vesselname</label>
+    <div class="p-col-12 p-md-10">
+      <input id="name" type="text" pInputText [(ngModel)]=vessel.name>
+    </div>
+  </div>
+  <div class="p-field p-grid">
+    <label for="imo" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">IMO</label>
+    <div class="p-col-12 p-md-10">
+      <input id="imo" type="text" pInputText [(ngModel)]=vessel.imo>
+    </div>
+  </div>
+  <div class="p-field p-grid">
+    <label for="teu" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Lastname</label>
+    <div class="p-col-12 p-md-10">
+      <input id="teu" type="text" pInputTextt [(ngModel)]=vessel.teu>
+    </div>
+  </div>
+</div>
