--- a/ui/src/app/vessel-editor/vessel-editor.component.html
+++ b/ui/src/app/vessel-editor/vessel-editor.component.html
@@ -12,9 +12,9 @@
     </div>
   </div>
   <div class="p-field p-grid">
-    <label for="teu" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Lastname</label>
+    <label for="teu" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">TEU</label>
     <div class="p-col-12 p-md-10">
-      <input id="teu" type="text" pInputTextt [(ngModel)]=vessel.teu>
+      <input id="teu" type="text" pInputText [(ngModel)]=vessel.teu>
     </div>
   </div>
 </div>
