--- a/ui/src/app/vessel/vessel.component.html
+++ b/ui/src/app/vessel/vessel.component.html
@@ -1,8 +1,22 @@
-<p-card>
-  <p-header>
-    Vessel
-  </p-header>
-  <p-button type="button" icon="pi pi-plus" class="p-button-raised p-button-rounded" (onClick)="createNewVessel()"></p-button>
-  <p-button type="button" icon="pi pi-pencil" class="p-button-raised p-button-rounded" (onClick)="editVessel()"></p-button>
-  <p-dropdown [options]="vessels" [(ngModel)]="selectedVessel" [filter]="true"></p-dropdown>
-</p-card>
+<div class="vessel">
+  <p-card>
+    <p-header class="vessel__header">
+      <span i18n="@@vessel">Vessel</span>
+    </p-header>
+    <div class="p-grid">
+      <div class="p-col-1">
+        <p-button style="margin-right: 5px" type="button" icon="pi pi-plus" class="p-button-raised p-button-rounded" (onClick)="createNewVessel()"></p-button>
+        <p-button type="button" icon="pi pi-pencil" class="p-button-raised p-button-rounded" (onClick)="editVessel()"></p-button>
+      </div>
+      <div class="p-col-3">
+        <p-dropdown [options]="vessels" [(ngModel)]="selectedVessel" [filter]="true"></p-dropdown>
+      </div>
+      <div class="p-col-1 vessel__vesselDetails"><span i18n="@@vessel__imo_number">Imo Number:</span></div>
+      <div class="p-col-1 vessel__vesselDetails"><span *ngIf="selectedVessel">{{selectedVessel.imo}}</span></div>
+      <div class="p-col-1 vessel__vesselDetails"><span i18n="@@vessel__teu">Vessel Size (Teu):</span></div>
+      <div class="p-col-1 vessel__vesselDetails"><span *ngIf="selectedVessel">{{selectedVessel.teu}}</span></div>
+      <div class="p-col-1 vessel__vesselDetails"><span i18n="@@vessel__service_name">Service Name:</span></div>
+      <div class="p-col-2 vessel__vesselDetails"><span *ngIf="selectedVessel">{{selectedVessel.serviceName}}</span></div>
+    </div>
+  </p-card>
+</div>
