--- a/ui/src/app/vessel-editor/vessel-editor.component.html
+++ b/ui/src/app/vessel-editor/vessel-editor.component.html
@@ -1,6 +1,6 @@
 <div class="p-fluid">
   <div class="p-field p-grid">
-    <label for="name" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Vesselname</label>
+    <label for="name" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Vessel name</label>
     <div class="p-col-12 p-md-10">
       <input id="name" type="text" pInputText [(ngModel)]=vessel.name>
     </div>
@@ -15,6 +15,12 @@
     <label for="teu" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">TEU</label>
     <div class="p-col-12 p-md-10">
       <input id="teu" type="text" pInputText [(ngModel)]=vessel.teu>
+    </div>
+  </div>
+  <div class="p-field p-grid">
+    <label for="serviceName" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Service name</label>
+    <div class="p-col-12 p-md-10">
+      <input id="serviceName" type="text" pInputText [(ngModel)]=vessel.serviceName>
     </div>
   </div>
 </div>
