--- a/ui/src/app/app.component.scss
+++ b/ui/src/app/app.component.scss
@@ -1,4 +1,14 @@
-@import "src/styles";
 .main {
-  background-color: $steelGrey;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+
+  &__spaceBetween {
+    margin-bottom: 30px;
+  }
+
+  &__spaceInnerComponent {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
