--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="p-grid header">
-  <div class="p-col header__logo">
-    <img src="/assets/DCSA_logo_color_on_dark_background.png" height="50px">
+  <div class="p-col-8">
+    <img class="header__logo" src="/assets/DCSA_logo_color_on_dark_background.png">
   </div>
-  <div>
-    <span class="p-col" i18n="@@menu_entry_port_call">Port Call</span>
+  <div class="p-col-2 header__menuEntry">
+    <span class="" i18n="@@menu_entry_port_call">Port Call</span>
   </div>
-  <div>
-    <span class="p-col" i18n="@@menu_entry_mandator">Company Name: {{ companyName }}</span>
+  <div class="p-col-2 header__menuEntry">
+    <span i18n="@@menu_entry_mandator">Company Name: {{ companyName }}</span>
   </div>
 </div>
