--- a/ui/src/app/header/header.component.scss
+++ b/ui/src/app/header/header.component.scss
@@ -2,9 +2,18 @@
 
 .header {
   width: 100%;
-  margin-bottom: 100px;
+  height: 100px;
   background-color: $darkNavyBlue;
+
   &__logo {
-    width: 20%;
+    margin-top: 10px;
+    width: 15%;
+    height: 50%;
+  }
+
+  &__menuEntry {
+    color: $foamWhite;
+    margin-top: 30px;
+    font-size: 20px;
   }
 }
