--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -12,3 +12,8 @@ $coralOrange: #DE5141;
 $buoyYellow: #F3E300;
 //Steel grey
 $steelGrey: #E4E4E6;
+
+body {
+  background-color: $steelGrey;
+  font-family: Poppins,sans-serif;
+}
