DCSA-3 DCSA Theme addad

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -6,6 +6,8 @@ $darkNavyBlue : #1E1E2C;
 $foamWhite: #F8F7F7;
 //Teal blue
 $tealBlue: #009093;
+//Teal blue bright
+$tealBlueBright: #298585;
 //Coral orange
 $coralOrange: #DE5141;
 //Buoy yellow
