--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -7,7 +7,9 @@ $foamWhite: #F8F7F7;
 //Teal blue
 $tealBlue: #009093;
 //Teal blue bright
-$tealBlueBright: #298585;
+$tealBlueBright: #48a5a5;
+//Teal blue bright
+$tealBlueDiscreet: #d4e9e9;
 //Coral orange
 $coralOrange: #DE5141;
 //Buoy yellow
