--- a/ui/DCSA-Theme.scss
+++ b/ui/DCSA-Theme.scss
@@ -1,10 +1,10 @@
 @charset "UTF-8";
-@import "../styles.scss";
+@import "src/styles";
 
 @font-face {
   font-family: "Poppins";
-  src:local("Poppins"),url(../assets/poppins-semibold-webfont.woff2) format("woff2"),
-  url(../assets/poppins-semibold-webfont.woff2) format("woff");
+  src:local("Poppins"),url(src/assets/poppins-semibold-webfont.woff2) format("woff2"),
+  url(src/assets/poppins-semibold-webfont.woff2) format("woff");
 }
 
 :root {
