--- a/ui/src/app/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/timestamp-editor/timestamp-editor.component.html
@@ -3,19 +3,48 @@
   </ng-template>
   <ng-template pTemplate="body" let-timestamp>
     <tr>
-      <td><p-dropdown [options]="timestampTypes" [(ngModel)]="timestamp.timestampType"></p-dropdown></td>
-      <td>{{ timestamp.classifierCode }}</td>
-      <td>{{ timestamp.eventTypeCode }}</td>
-      <td>{{ timestamp.eventLocationCode }}</td>
-      <td><p-calendar [(ngModel)]="commTimestampDate" showTime="true" hourFormat="24" showButtonBar="true" showIcon="true" showWeek="true" monthNavigator="true" yearNavigator="true" yearRange="2010:2030"></p-calendar></td>
+      <td style="width: 7%; padding-left: 0"><p-dropdown [options]="timestampTypes" [(ngModel)]="timestamp.timestampType"></p-dropdown></td>
+      <td style="width: 5%">{{ timestamp.classifierCode }}</td>
+      <td style="width: 5%">{{ timestamp.eventTypeCode }}</td>
+      <td style="width: 5%">{{ timestamp.eventLocationCode }}</td>
+      <td><p-calendar [(ngModel)]="commTimestampDate" showTime="true" hourFormat="24" showButtonBar="true" showIcon="true" showWeek="true"
+                      monthNavigator="true" yearNavigator="true" yearRange="2010:2030"></p-calendar></td>
       <td><p-calendar [(ngModel)]="eventTimestamp" showTime="true" hourFormat="24" showButtonBar="true" showIcon="true" showWeek="true" monthNavigator="true" yearNavigator="true" yearRange="2010:2030"></p-calendar></td>
-      <td>{{ timestamp.portFrom }}</td>
-      <td>{{ timestamp.portTo }}</td>
-      <td>{{ timestamp.nextPort }}</td>
-      <td>{{ timestamp.direction }}</td>
-      <td>{{ timestamp.terminalId }}</td>
+      <td style="width: 7%"><p-dropdown [options]="ports" [(ngModel)]="timestamp.portFrom" [filter]="true">
+        <ng-template let-port pTemplate="item">
+          <div class="port-item">
+            <div>{{port.value.code}}</div>
+            <div>{{port.value.name}}</div>
+          </div>
+        </ng-template>
+      </p-dropdown></td>
+      <td style="width: 7%"><p-dropdown [options]="ports" [(ngModel)]="timestamp.portTo" [filter]="true">
+        <ng-template let-port pTemplate="item">
+          <div class="port-item">
+            <div>{{port.value.code}}</div>
+            <div>{{port.value.name}}</div>
+          </div>
+        </ng-template>
+      </p-dropdown></td>
+      <td style="width: 7%"><p-dropdown [options]="ports" [(ngModel)]="timestamp.nextPort" [filter]="true">
+        <ng-template let-port pTemplate="item">
+          <div class="port-item">
+            <div>{{port.value.code}}</div>
+            <div>{{port.value.name}}</div>
+          </div>
+        </ng-template>
+      </p-dropdown></td>
+      <td style="width: 7%"><p-dropdown [options]="directions" [(ngModel)]="timestamp.direction"></p-dropdown></td>
+      <td style="width: 7%"><p-dropdown [options]="terminals" [(ngModel)]="timestamp.terminalId">
+        <ng-template let-terminal pTemplate="item">
+          <div class="port-item">
+            <div>{{terminal.value.code}}</div>
+            <div>{{terminal.value.name}}</div>
+          </div>
+        </ng-template>
+      </p-dropdown></td>
       <td><label><input type="text" pInputText [(ngModel)]="timestamp.locationId"/></label></td>
-      <td><p-button icon="pi pi-save"></p-button></td>
+      <td style="width: 5%"><p-button icon="pi pi-save"></p-button></td>
     </tr>
   </ng-template>
 </p-table>
