DCSA-3 Added buttons in vessel editor

--- a/ui/src/app/vessel-editor/vessel-editor.component.html
+++ b/ui/src/app/vessel-editor/vessel-editor.component.html
@@ -23,4 +23,10 @@
       <input id="serviceName" type="text" pInputText [(ngModel)]=vessel.serviceName>
     </div>
   </div>
+  <div class="p-field p-grid">
+    <span class="p-buttonset">
+        <button pButton type="button" label="Save" icon="pi pi-check"></button>
+        <button pButton type="button" label="Cancel" icon="pi pi-times" class="p-button-warning"></button>
+    </span>
+  </div>
 </div>
