DCSA-3 fixed datepicker layout

--- a/ui/DCSA-Theme.scss
+++ b/ui/DCSA-Theme.scss
@@ -253,7 +253,7 @@ p-calendar.ng-dirty.ng-invalid > .p-calendar > .p-inputtext {
   border-top: 1px solid #dee2e6;
 }
 .p-datepicker .p-datepicker-buttonbar .p-button {
-  width: auto;
+  width: 250px;
 }
 .p-datepicker .p-timepicker {
   border-top: 1px solid #dee2e6;
