--- a/ui/src/app/header/header.component.scss
+++ b/ui/src/app/header/header.component.scss
@@ -6,9 +6,9 @@
   background-color: $darkNavyBlue;
 
   &__logo {
-    margin-top: 10px;
-    width: 15%;
-    height: 50%;
+    margin-top: 0px;
+    width: 124px;
+    height: 71px;
   }
 
   &__menuEntry {
