--- a/ui/src/app/vessel-editor/vessel-editor.component.html
+++ b/ui/src/app/vessel-editor/vessel-editor.component.html
@@ -18,9 +18,9 @@
     </div>
   </div>
   <div class="p-field p-grid">
-    <label for="serviceName" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Service name</label>
+    <label for="serviceName" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Service name or code</label>
     <div class="p-col-12 p-md-10">
-      <input id="serviceName" type="text" pInputText [(ngModel)]=vessel.serviceName>
+      <input id="serviceName" type="text" pInputText [(ngModel)]=vessel.serviceNameCode>
     </div>
   </div>
   <div class="p-field p-grid">
