--- a/ui/src/app/vessel/vessel.component.html
+++ b/ui/src/app/vessel/vessel.component.html
@@ -11,12 +11,12 @@
       <div class="p-col-3">
         <p-dropdown [options]="vessels" [(ngModel)]="selectedVessel" [filter]="true"></p-dropdown>
       </div>
-      <div class="p-col-1 vessel__vesselDetails"><span i18n="@@vessel__imo_number">Imo Number:</span></div>
+      <div class="p-col-1 vessel__vesselDetails"><span i18n="@@vessel__imo_number">Imo number:</span></div>
       <div class="p-col-1 vessel__vesselDetails"><span *ngIf="selectedVessel">{{selectedVessel.imo}}</span></div>
-      <div class="p-col-1 vessel__vesselDetails"><span i18n="@@vessel__teu">Vessel Size (Teu):</span></div>
+      <div class="p-col-1 vessel__vesselDetails"><span i18n="@@vessel__teu">Vessel size (TEU):</span></div>
       <div class="p-col-1 vessel__vesselDetails"><span *ngIf="selectedVessel">{{selectedVessel.teu}}</span></div>
-      <div class="p-col-1 vessel__vesselDetails"><span i18n="@@vessel__service_name">Service Name:</span></div>
-      <div class="p-col-2 vessel__vesselDetails"><span *ngIf="selectedVessel">{{selectedVessel.serviceName}}</span></div>
+      <div class="p-col-1 vessel__vesselDetails"><span i18n="@@vessel__service_name">Service name or code:</span></div>
+      <div class="p-col-3 vessel__vesselDetails"><span *ngIf="selectedVessel">{{selectedVessel.serviceNameCode}}</span></div>
     </div>
   </p-card>
 </div>
