--- a/ui/src/app/vessel/vessel.component.html
+++ b/ui/src/app/vessel/vessel.component.html
@@ -9,7 +9,7 @@
         <p-button type="button" icon="pi pi-pencil" class="p-button-raised p-button-rounded" (onClick)="editVessel()"></p-button>
       </div>
       <div class="p-col-3">
-        <p-dropdown [options]="vessels" [(ngModel)]="selectedVessel" [filter]="true"></p-dropdown>
+        <p-dropdown [options]="vessels" [(ngModel)]="selectedVessel" [filter]="true" (onChange)="selectVessel()"></p-dropdown>
       </div>
       <div class="p-col-1 vessel__vesselDetails"><span i18n="@@vessel__imo_number">Imo number:</span></div>
       <div class="p-col-1 vessel__vesselDetails"><span *ngIf="selectedVessel">{{selectedVessel.imo}}</span></div>
