--- a/ui/src/app/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/timestamp-table/timestamp-table.component.html
@@ -1,22 +1,54 @@
-<p-table #dt [value]="timestamps" sortField="logOfCall" [sortOrder]="1">
+
+<span class="p-input-icon-left">
+    <i class="pi pi-search"></i>
+    <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'startsWith')"
+           placeholder="Search in Timestamps"
+           class="p-column-filter">
+</span>
+
+
+
+
+<p-table #dt [value]="timestamps" sortField="logOfCall" [sortOrder]="1" [filterDelay]="0" [globalFilterFields]="['timestampType','classifierCode','eventTypeCode','portTo','portFrom', 'nextPort']">>
   <ng-template pTemplate="header">
     <tr>
-      <th style="width: 7%" pSortableColumn="timestampType">Timestamp <p-sortIcon field="timestampType"></p-sortIcon></th>
-      <th style="width: 5%" pSortableColumn="classifierCode">Classifier Code <p-sortIcon field="classifierCode"></p-sortIcon></th>
-      <th style="width: 5%" pSortableColumn="eventTypeCode">Event Type Code<p-sortIcon field="eventTypeCode"></p-sortIcon></th>
-      <th pSortableColumn="logOfCall">Log of call <p-sortIcon field="logOfCall"></p-sortIcon></th>
-      <th pSortableColumn="eventTimestamp">Event. Timestamp <p-sortIcon field="eventTimestamp"></p-sortIcon></th>
-      <th style="width: 7%" pSortableColumn="portFrom">Port From <p-sortIcon field="portFrom"></p-sortIcon></th>
-      <th style="width: 7%" pSortableColumn="portTo">Port To <p-sortIcon field="portTo"></p-sortIcon></th>
-      <th style="width: 7%" pSortableColumn="nextPort">Next Port <p-sortIcon field="nextPort"></p-sortIcon></th>
-      <th style="width: 7%" pSortableColumn="direction">Direction <p-sortIcon field="direction"></p-sortIcon></th>
-      <th style="width: 7%" pSortableColumn="terminalId">Terminal ID <p-sortIcon field="terminalId"></p-sortIcon></th>
-      <th pSortableColumn="locationId">Location ID <p-sortIcon field="locationId"></p-sortIcon></th>
+      <th style="width: 7%" pSortableColumn="timestampType">Timestamp
+        <p-sortIcon field="timestampType"></p-sortIcon>
+      </th>
+      <th style="width: 5%" pSortableColumn="classifierCode">Classifier Code
+        <p-sortIcon field="classifierCode"></p-sortIcon>
+      </th>
+      <th style="width: 5%" pSortableColumn="eventTypeCode">Event Type Code
+        <p-sortIcon field="eventTypeCode"></p-sortIcon>
+      </th>
+      <th pSortableColumn="logOfCall">Log of call
+        <p-sortIcon field="logOfCall"></p-sortIcon>
+      </th>
+      <th pSortableColumn="eventTimestamp">Event. Timestamp
+        <p-sortIcon field="eventTimestamp"></p-sortIcon>
+      </th>
+      <th style="width: 7%" pSortableColumn="portFrom">Port From
+        <p-sortIcon field="portFrom"></p-sortIcon>
+      </th>
+      <th style="width: 7%" pSortableColumn="portTo">Port To
+        <p-sortIcon field="portTo"></p-sortIcon>
+      </th>
+      <th style="width: 7%" pSortableColumn="nextPort">Next Port
+        <p-sortIcon field="nextPort"></p-sortIcon>
+      </th>
+      <th style="width: 7%" pSortableColumn="direction">Direction
+        <p-sortIcon field="direction"></p-sortIcon>
+      </th>
+      <th style="width: 7%" pSortableColumn="terminalId">Terminal ID
+        <p-sortIcon field="terminalId"></p-sortIcon>
+      </th>
+      <th pSortableColumn="locationId">Location ID
+        <p-sortIcon field="locationId"></p-sortIcon>
+      </th>
       <th style="width: 5%">Option</th>
     </tr>
     <tr>
-      <td><input pInputText type="text" (input)="dt.filter($event.target.value, 'timestampType', 'startsWith')" placeholder="Search by Timestampetype"
-                 class="p-column-filter"></td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -43,7 +75,9 @@
       <td style="width: 7%">{{ timestamp.direction }}</td>
       <td style="width: 7%">{{ timestamp.terminalId }}</td>
       <td>{{ timestamp.locationId }}</td>
-      <td style="width: 5%"><p-button icon="pi pi-trash"></p-button></td>
+      <td style="width: 5%">
+        <p-button icon="pi pi-trash"></p-button>
+      </td>
     </tr>
   </ng-template>
 </p-table>
