--- a/ui/src/app/vessel/vessel.component.scss
+++ b/ui/src/app/vessel/vessel.component.scss
@@ -4,9 +4,14 @@
     margin-left: 15px;
     font-size: 20px;
   }
+
   &__vesselDetails {
     padding-top: 15px;
     width: fit-content;
     min-width: 150px;
+  }
+
+  &__addVesselBtn {
+    margin-right: 5px;
   }
 }
