DCSA-3 added formatting for teu in vessel editor

--- a/ui/src/app/vessel-editor/vessel-editor.component.html
+++ b/ui/src/app/vessel-editor/vessel-editor.component.html
@@ -14,7 +14,7 @@
   <div class="p-field p-grid">
     <label for="teu" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">TEU</label>
     <div class="p-col-12 p-md-10">
-      <input id="teu" type="text" pInputText [(ngModel)]=vessel.teu>
+      <p-inputNumber id="teu" mode="decimal" [(ngModel)]=vessel.teu></p-inputNumber>
     </div>
   </div>
   <div class="p-field p-grid">
