DCSA-3 fixed editing selected vessel display bug

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -15,10 +15,8 @@
     </div>
   </ng-template>
   <ng-template #emptyVessel>
-    <div class="main__spaceInnerComponent">
+    <div class="main__spaceInnerComponent" style="text-align: center">
       <p-card><span i18n="@@NoVesselSelected" class="main__notSelectedIdicator">No Vessel Selected</span></p-card>
     </div>
   </ng-template>
-
-
 </div>
