DCSA-3 included timestamp-editor.component again with vessel id

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -10,7 +10,7 @@
     <div class="main__spaceInnerComponent">
       <p-card>
         <app-timestamp-table [vesselId]="vesselId"></app-timestamp-table>
-        <app-timestamp-editor></app-timestamp-editor>
+        <app-timestamp-editor [vesselId]="vesselId"></app-timestamp-editor>
       </p-card>
     </div>
   </ng-template>
