DCSA-3 DCSA added PortCall timestamp add function

--- a/ui/src/app/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/timestamp-editor/timestamp-editor.component.html
@@ -60,8 +60,10 @@
       </td>
       <td><label><input type="text" pInputText [(ngModel)]="timestamp.locationId"/></label></td>
       <td style="width: 5%">
-        <p-button icon="pi pi-save"></p-button>
+        <p-button icon="pi pi-save" (onClick)="savePortcallTimestamp(timestamp, vesselId)"></p-button>
       </td>
     </tr>
   </ng-template>
 </p-table>
+<p-toast key="TimestampAddSuccess" position="bottom-right"></p-toast>
+<p-toast key="TimestampAddError" position="bottom-right"></p-toast>
