--- a/ui/src/app/timestamp-editor/timestamp-editor.component.scss
+++ b/ui/src/app/timestamp-editor/timestamp-editor.component.scss
@@ -5,3 +5,9 @@
   text-transform: capitalize;
   font-size: 12px;
 }
+
+.terminalListDetails {
+  color: $darkGrey;
+  text-transform: capitalize;
+  font-size: 12px;
+}
