--- a/ui/src/app/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/timestamp-table/timestamp-table.component.html
@@ -1,5 +1,5 @@
 <p-table #dt [value]="$timestamps | async" sortField="logOfCall" [sortOrder]="1" [filterDelay]="0"
-         [globalFilterFields]="['timestampType','classifierCode','eventTypeCode','portTo','portFrom', 'nextPort']">
+         [globalFilterFields]="['timestampType','classifierCode','eventTypeCode','portApproach','portFrom', 'portNext']">
   <ng-template pTemplate="caption">
     <div class="p-grid">
       <div class="p-col"></div>
@@ -34,11 +34,11 @@
       <th style="width: 7%" pSortableColumn="portFrom">Port From
         <p-sortIcon field="portFrom"></p-sortIcon>
       </th>
-      <th style="width: 7%" pSortableColumn="portTo">Port To
-        <p-sortIcon field="portTo"></p-sortIcon>
+      <th style="width: 7%" pSortableColumn="portApproach">Port Approach
+        <p-sortIcon field="portApproach"></p-sortIcon>
       </th>
-      <th style="width: 7%" pSortableColumn="nextPort">Next Port
-        <p-sortIcon field="nextPort"></p-sortIcon>
+      <th style="width: 7%" pSortableColumn="portNext">Next Port
+        <p-sortIcon field="portNext"></p-sortIcon>
       </th>
       <th style="width: 7%" pSortableColumn="direction">Direction
         <p-sortIcon field="direction"></p-sortIcon>
@@ -74,8 +74,8 @@
       <td>{{ timestamp.logOfCall | date: 'MM/dd/yyyy HH:dd ZZZZ' }}</td>
       <td>{{ timestamp.eventTimestamp | date: 'MM/dd/yyyy HH:dd ZZZZ' }}</td>
       <td style="width: 7%">{{ timestamp.portFrom }}</td>
-      <td style="width: 7%">{{ timestamp.portTo }}</td>
-      <td style="width: 7%">{{ timestamp.nextPort }}</td>
+      <td style="width: 7%">{{ timestamp.portApproach }}</td>
+      <td style="width: 7%">{{ timestamp.portNext }}</td>
       <td style="width: 7%">{{ timestamp.direction }}</td>
       <td style="width: 7%">{{ timestamp.terminalId }}</td>
       <td>{{ timestamp.locationId }}</td>
